[gd_scene load_steps=9 format=2]

[ext_resource path="res://Imported Assets/GFX/PNG/Tiles/tile_537.png" type="Texture" id=1]
[ext_resource path="res://Computer/Computer.gd" type="Script" id=2]
[ext_resource path="res://Computer/ComputerPopup.tscn" type="PackedScene" id=3]
[ext_resource path="res://Imported Assets/GFX/PNG/Tiles/tile_463.png" type="Texture" id=4]
[ext_resource path="res://Imported Assets/GFX/PNG/Tiles/tile_519.png" type="Texture" id=5]
[ext_resource path="res://Interface/White_Label_text_style.tres" type="Theme" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 26.6114, 32 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 18.5164, 31.7348 )

[node name="Computer" type="Node2D"]
script = ExtResource( 2 )

[node name="keyboard" type="Sprite" parent="."]
modulate = Color( 0.309804, 0.309804, 0.309804, 1 )
position = Vector2( 16.7789, 4.47164 )
rotation = 1.5708
scale = Vector2( 0.459, 0.65 )
texture = ExtResource( 4 )

[node name="mouse" type="Sprite" parent="."]
modulate = Color( 0.309804, 0.309804, 0.309804, 1 )
position = Vector2( 16.1153, -16.8972 )
scale = Vector2( 0.0800003, 0.32 )
texture = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -6.14713, 0.323532 )
rotation = 1.5708
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 47.3913, 0 )
shape = SubResource( 1 )

[node name="ClickableArea" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickableArea"]
shape = SubResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ComputerPopup" parent="CanvasLayer" instance=ExtResource( 3 )]

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 33.4995, 0.250343 )
rotation = 1.5708
scale = Vector2( 0.979574, 1 )
enabled = false
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="." groups=[
"labels",
]]
visible = false
margin_left = 36.5486
margin_top = -26.0932
margin_right = 104.549
margin_bottom = -3.09325
theme = ExtResource( 6 )
text = "TEST"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="input_event" from="ClickableArea" to="." method="_on_ClickableArea_input_event"]
